# yew-web-app

./: .gitignore  Cargo.lock.bak  Cargo.toml  Trunk.toml  btn_explainer_graphics.scss  config.toml  index.html  index.scss  logo_danceomatic.scss  package-lock.json  package.json  readme.md
src/: audio_player.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  mod.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config.toml
src-tauri/src/: commands.rs  config copy.toml  config.toml  config_manager.rs  lib.rs  main.rs  path_utils.rs
src-tauri/src/static/: config.toml
src-tauri/static/: config.toml
src/components/: mod.rs
src/components/atoms/: arrow_respnd_ui.rs  audio_element.rs  dance_o_matic_logo.rs  dancer.rs  green_btn.rs  mod.rs  shared_props.rs  use_focus_div.rs
src/components/data/: audio_data.rs  choreography_data.rs  config.rs  config_deepseek.rs  image_imports.rs  mod.rs  video_data.rs  video_imports.rs
src/components/molecules/: async_await_choreo_video.rs  audio_list.rs  btn_explainer_graphics.rs  keydown_logic.rs  mod.rs  music_context.rs  scollable_div.rs  scollable_div_test.rs  sound_effects.rs  sound_effects.rs.old  state_location.rs  video_list.rs  video_settings.rs
src/components/organisms/: about_choreo.rs  about_choreo1.rs  admin_panel.rs  choreo_videos.rs  fullscreen_enforcer.rs  intro_screen.rs  keydown_logic.rs  load_screen.rs  main_menu.rs  mod.rs  music.rs  test_x_keydown.rs
static/: config.toml
