[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo = "0.11.0"
serde = "1.0.194"
serde_json = "1.0.110"
web-sys = {version = "0.3.66", features = ["HtmlAudioElement"] }