[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# this is the development version of Yew
# yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew = { version = "0.21.0", features = ["csr"] }
time = ">=0.3.35"
gloo = "0.11.0"
gloo-timers = "0.3.0"
gloo-file = "0.3"
gloo-utils = "0.2.0"
serde = "1.0.194"
serde_json = "1.0.110"
serde-wasm-bindgen = "0.6.0"
web-sys = { version = "0.3.66", features = [
    "HtmlAudioElement",
    "Element",
    "HtmlElement",
    "DomTokenList",
    "SvgElement",
] }
#yew-router = { git = "https://github.com/yewstack/yew.git" }
yew-router = "0.18.0"
#once_cell = "1.8.0"
lazy_static = "1.4"
futures = "0.3.30"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
js-sys = "=0.3.77"
async-std = "1.10"
toml = "0.8.20"
dirs-next = "2.0"
log = "0.4"
env_logger = "0.10"

