[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 3 # Use `3` if you prefer speed. # us "s" to prioritizes small binary size. 
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[package]
name = "app"
version = "0.2.0"
description = "disktop app where you can toggle between different videos"
authors = ["Martin Schultz Kristensen"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
#env_logger = "0.10"
#rodio = "0.20.1"
tauri-plugin-fs = "2"
tauri-plugin-log = "2.0.0"
tauri-plugin-dialog = "2.2.1"
tokio = "1.44.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
